Fixed fullwidth on mobile

--- a/css/responsive.less
+++ b/css/responsive.less
@@ -215,6 +215,13 @@
         padding-top: 20px;
     }
 
+    .makeFullWidth #writr__main,
+    .makeFullWidth .page-footer,
+    .makeFullWidth div.breadcrumbs,
+    .makeFullWidth #writr__page:before {
+      width: 100%;
+    }
+
     div.breadcrumbs {
         display: none;
     }
